syntax = "proto3";

option csharp_namespace = "DictationaryDataService.gRPC";

package DictationaryDataService.v1;


import "Protos/v1/types.proto";

service DictationaryDataService
{
  rpc CreateDictationary (stream DictaionaryCreateRequest) returns (stream DictaionaryCreateReply){}
}

message DictaionaryCreateRequest
{
  string Name = 1;
  repeated RequisiteProperty RequisiteProperties =2;
}

message  DictaionaryCreateReply
{
  
}